# norppalive-discord

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflows/: deploy.yaml
k8s/base/: deployment.yaml  kustomization.yaml
k8s/overlays/prod/: deployment-patch.yaml  kustomization.yaml  sealed-secret.yaml  sealed-secret.yaml.example  service-account.yaml
proto/norppalive/v1/: bot.proto  settings.proto
src/: error.rs  grpc.rs  kafka_producer.rs  main.rs  models.rs  settings.rs
src/actors/: bot_request.rs  discord.rs  kafka.rs  mod.rs  settings_consumer.rs
src/commands/: detect_client.rs  draw.rs  mod.rs  norpantunnistus.rs  rate_limit.rs
