[package]
name = "norppalive-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
base64 = "0.22.1"
dotenvy = "0.15.7"
futures = "0.3.31"
rdkafka = "0.37.0"
bytes = "1"
miette = { version = "7.6.0", features = ["fancy"] }
poise = "0.6.1"
prost = "0.14.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity = { version = "0.12.4", features = ["client", "reqwest"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "test-util"] }

[build-dependencies]
tonic-build = "0.14.5"
tonic-prost-build = "0.14"
